# paperscraper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/paperscraper/: __init__.py  __main__.py  client.py  exporter.py  filters.py  models.py
