[tool.poetry]
name = "pubmed-paperscraper"
version = "0.1.1"
description = "CLI tool to fetch research papers with non-academic authors from PubMed"
authors = ["Dhruv Jha <dhruvjha2002@gmail.com>"]
readme = "README.md"
packages = [{ include = "paperscraper", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
typer = "^0.12.3"
rich = "^13.7.1"
pandas = "^2.2.2"
lxml = "^6.0.0"

[tool.poetry.scripts]
get-papers-list = "paperscraper.__main__:app"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10"
pytest = "^8.2"
pytest-asyncio = "^0.23"
ruff = "^0.4"
